TestLink update initial version

--- a/pom.xml
+++ b/pom.xml
@@ -8,37 +8,74 @@
 	<packaging>jar</packaging>
 
 	<name>robotframework-statusupdater</name>
+	<description>A Robot Framework library to update test results to test management systems.</description>
 	<url>https://github.com/hi-fi/robotframework-statusupdater</url>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<repositories>
+		<repository>
+			<id>snapshots-repo</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/hi-fi/robotframework-statusupdater/issues</url>
+	</issueManagement>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<url>https://github.com/hi-fi/robotframework-statusupdater</url>
+		<connection>scm:git:git://github.com/hi-fi/robotframework-statusupdater.git</connection>
+		<developerConnection>scm:git:git@github.com:hi-fi/robotframework-statusupdater.git</developerConnection>
+	</scm>
+
+	<developers>
+		<developer>
+			<name>Juho Saarinen</name>
+			<email>juho.saarinen@gmail.com</email>
+			<id>hi-fi</id>
+		</developer>
+	</developers>
+
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<httpClient.version>4.5.2</httpClient.version>
+		<httpClient.version>0.0.4</httpClient.version>
+		<robotframework.maven.plugin.version>1.4.7</robotframework.maven.plugin.version>
 		<keywords.class>StatusUpdateLibrary</keywords.class>
 	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.robotframework</groupId>
-			<artifactId>javalib-core</artifactId>
-			<version>1.2.1</version>
+			<groupId>com.github.hi-fi</groupId>
+			<artifactId>robotframework-javalib-base</artifactId>
+			<version>0.0.2</version>
 		</dependency>
 		<dependency>
-			<groupId>org.robotframework</groupId>
-			<artifactId>robotframework-maven-plugin</artifactId>
-			<version>1.4.6</version>
-			<type>maven-plugin</type>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
+			<groupId>com.github.hi-fi</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>${httpClient.version}</version>
+			<version>0.0.4</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpmime</artifactId>
-			<version>${httpClient.version}</version>
-		</dependency>
-
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -55,74 +92,193 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>br.eti.kinoshita</groupId>
+			<artifactId>testlink-java-api</artifactId>
+			<version>1.9.16-1</version>
+		</dependency>
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.2.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.9.1</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>build-helper-maven-plugin</artifactId>
+						<version>1.10</version>
+						<executions>
+							<execution>
+								<id>attach-artifacts</id>
+								<phase>package</phase>
+								<goals>
+									<goal>attach-artifact</goal>
+								</goals>
+								<configuration>
+									<artifacts>
+										<artifact>
+											<file>${project.build.directory}/${keywords.class}.html</file>
+											<type>html</type>
+										</artifact>
+										<artifact>
+											<file>${project.build.directory}/${keywords.class}.xml</file>
+											<type>xml</type>
+										</artifact>
+									</artifacts>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.robotframework</groupId>
+						<artifactId>robotframework-maven-plugin</artifactId>
+						<version>1.4.7</version>
+						<executions>
+							<execution>
+								<id>html</id>
+								<phase>package</phase>
+								<goals>
+									<goal>libdoc</goal>
+								</goals>
+								<configuration>
+									<libdoc>
+										<outputDirectory>${project.build.directory}</outputDirectory>
+										<outputFile>${keywords.class}.html</outputFile>
+										<libraryOrResourceFile>${keywords.class}</libraryOrResourceFile>
+									</libdoc>
+								</configuration>
+							</execution>
+							<execution>
+								<id>xml</id>
+								<phase>package</phase>
+								<goals>
+									<goal>libdoc</goal>
+								</goals>
+								<configuration>
+									<libdoc>
+										<outputDirectory>${project.build.directory}</outputDirectory>
+										<outputFile>${keywords.class}.xml</outputFile>
+										<libraryOrResourceFile>${keywords.class}</libraryOrResourceFile>
+									</libdoc>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.3</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>2.5</version>
+						<configuration>
+							<autoVersionSubmodules>true</autoVersionSubmodules>
+							<useReleaseProfile>false</useReleaseProfile>
+							<releaseProfiles>release</releaseProfiles>
+							<goals>deploy</goals>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.9.1</version>
-				<executions>
-					<execution>
-						<id>attach-artifacts</id>
-						<phase>package</phase>
-						<goals>
-							<goal>attach-artifact</goal>
-						</goals>
-						<configuration>
-							<artifacts>
-								<artifact>
-									<file>${project.build.directory}/${keywords.class}.html</file>
-									<type>html</type>
-									<classifier>libdoc</classifier>
-								</artifact>
-								<artifact>
-									<file>${project.build.directory}/${keywords.class}.xml</file>
-									<type>xml</type>
-									<classifier>libdoc</classifier>
-								</artifact>
-							</artifacts>
-						</configuration>
-					</execution>
-				</executions>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9.1</version>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.8</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.robotframework</groupId>
 				<artifactId>robotframework-maven-plugin</artifactId>
-				<version>1.4.4</version>
+				<version>1.4.7</version>
 				<executions>
 					<execution>
-						<id>html</id>
-						<phase>package</phase>
 						<goals>
-							<goal>libdoc</goal>
+							<goal>acceptance-test</goal>
 						</goals>
 						<configuration>
-							<libdoc>
-								<outputDirectory>${project.build.directory}</outputDirectory>
-								<outputFile>${keywords.class}.html</outputFile>
-								<libraryOrResourceFile>${keywords.class}</libraryOrResourceFile>
-							</libdoc>
+							<logLevel>DEBUG</logLevel>
+							<listener>${keywords.class}</listener>
+							<extraPathDirectories>
+								<extraPathDirectory>target/robotframework-statusupdater-${project.version}.jar</extraPathDirectory>
+							</extraPathDirectories>
+							<nonCriticalTags>
+								<nonCriticalTag>Non-Critical</nonCriticalTag>
+							</nonCriticalTags>
 						</configuration>
 					</execution>
 					<execution>
-						<id>xml</id>
-						<phase>package</phase>
+						<id>verifyResults</id>
 						<goals>
-							<goal>libdoc</goal>
+							<goal>verify</goal>
 						</goals>
-						<configuration>
-							<libdoc>
-								<outputDirectory>${project.build.directory}</outputDirectory>
-								<outputFile>${keywords.class}.xml</outputFile>
-								<libraryOrResourceFile>${keywords.class}</libraryOrResourceFile>
-							</libdoc>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
