--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,16 @@
 			<artifactId>testlink-java-api</artifactId>
 			<version>1.9.16-1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.11</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
