--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.20</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<profiles>
@@ -275,7 +281,6 @@
 						</goals>
 						<configuration>
 							<logLevel>DEBUG</logLevel>
-							<listener>${keywords.class}</listener>
 							<extraPathDirectories>
 								<extraPathDirectory>target/robotframework-statusupdater-${project.version}.jar</extraPathDirectory>
 							</extraPathDirectories>
